9/5/23
	-Moved things in the L bank around in order to have more room for battle system improvements
	-SHARP spell now gives all allies a single use damage doubling that clears on next attack.
	-Manually "exported" logo from image
9/6/23
	-Added logo into setup screen
		-Realized that all the text in the game is actually 1 pixel left of center
	-Centered all text
9/7/23
	-Party members gain delta HP, delta MP on level up
9/8/23
	-Should no longer be possibly for the campfire to spawn on top of the exit.
	-Added all the enemy names into the ROM
9/19/23
	-More artwork
9/20/23
	-Added lots of graphics into ROM

KNOWN BUGS:
	-Enemy graphics got slightly messed up by the text pixel change... HMCLR needed?
	-Enemies not being healed properly by TRIAGE, possibly connected to the heals fully condition?

TODO:
	Mandatory:
	-Implement all enemy special abilities
		-LICH (untested)
		-JESTER (untested)
		-GIFT (untested)
		-SLIME
		-OOZE
		-ARMOR
		-GLDORB?
	-Connect visual and sound effects
		-Partially working?

	Nice:
	-Setup screen logo effect?
	-Try to center enemies more precisely
	-Add call for excited avatar
	-Random damage and healing offsets
	-Make enemies with legendary resistance take 50% less damage from all sources
		-Preferably don't factor this in when showing damage messages
		-Nerfs blight significantly against bosses...

	Ehh:
	-Position enemies in "group skirmish" formation?
	-Being guarded reduces blight damage, fix?

	Additional sounds to consider:
		-Footsteps
		-Monster roar near exit
		-Battle victory jingle
		-Game victory jingle
		-Crackling campfire sound (would need to be a loop, so it's almost certainly out of scope)

	DOESN'T REQUIRE LOGIC:
		-Improve in-maze campfire graphics to look less squished when they appear
		-Add more text & messages
		-Create all enemy graphics
		-Create all enemy stats
		-Create all enemy AI tables
		-Create all encounter tables
		-Tune maze exit tables
		-Tune all visual effects
		-Create all sound effects